--- a/electronics/dipole-field-surrogate/notebooks/01.1 - Electric Field Surrogate Model - Spatial.ipynb
+++ b/electronics/dipole-field-surrogate/notebooks/01.1 - Electric Field Surrogate Model - Spatial.ipynb
@@ -8,10 +8,10 @@
     "# EM Field Prediction - Spatial\n",
     "\n",
     "*Scenario*:\n",
-    "An RF engineer is designing a microstrip antenna for 5G communication. They need to understand the electric field distribution around the antenna to optimize radiation patterns and ensure regulatory compliance. Traditional EM simulation (using tools like Keysight EMPro) takes N minutes per geometry configuration.\n",
+    "An RF engineer is designing a microstrip antenna for 5G communication. They need to understand the electric field distribution around the antenna to optimize radiation patterns and ensure regulatory compliance. Traditional EM simulation takes N minutes per geometry configuration.\n",
     "\n",
     "*Your Goal*:\n",
-    "Build an ML surrogate model that predicts the 2D electric field distribution around a simple antenna geometry in <100ms, with <10% error compared to the physics simulator.\n",
+    "Build an ML surrogate model that predicts the 2D electric field distribution around a simple antenna geometry.\n",
     "\n",
     "*Input*: [L, W, x_pos, y_pos, x, y, V]\n",
     "\n",
@@ -443,14 +443,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9cfa7918",
-   "metadata": {},
-   "source": [
-    "Now we can prepare the dataset for training a surrogate. Let's try to keep the output targets with dimension (batch, n1, n2, channels) so that we train a CNN (that looks like the best ML architecture for this problem where we have to predict a grid)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "213bfbce",
@@ -715,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "88da8cc8",
    "metadata": {},
    "outputs": [
@@ -769,17 +761,11 @@
     "\n",
     "        outputs_batch = model(inputs_batch)\n",
     "\n",
-    "        #physics_loss = divergence_loss(outputs_batch)\n",
     "        data_loss = criterion(outputs_batch, targets_batch) \n",
     "\n",
-    "        loss = data_loss # + physics_loss_weight * physics_loss\n",
+    "        loss = data_loss\n",
     "\n",
     "        loss.backward()\n",
-    "\n",
-    "        # Checking the gradients\n",
-    "        # if epoch % 50 == 0:\n",
-    "        #     for n, p in model.named_parameters():\n",
-    "        #         print(n, p.grad.abs().mean().item())\n",
     "\n",
     "        optimizer.step()\n",
     "\n",
@@ -787,18 +773,15 @@
     "        batch_size = inputs_batch.size(0)\n",
     "        running_train_loss += loss.item() * batch_size\n",
     "        running_data_loss += data_loss.item() * batch_size\n",
-    "        #running_physics_loss += physics_loss.item() * batch_size\n",
     "\n",
     "    n_train = len(train_loader.dataset)\n",
     "\n",
     "    epoch_train_loss = running_train_loss / n_train\n",
     "    epoch_data_loss = running_data_loss / n_train\n",
-    "    #epoch_physics_loss = running_physics_loss / n_train\n",
     "\n",
     "    # Store\n",
     "    train_losses.append(epoch_train_loss)\n",
     "    train_data_losses.append(epoch_data_loss)\n",
-    "    #train_physics_losses.append(epoch_physics_loss)\n",
     "\n",
     "    # Validation\n",
     "    model.eval()\n",
@@ -813,27 +796,23 @@
     "\n",
     "            outputs_batch = model(inputs_batch)\n",
     "\n",
-    "            # physics_loss_val = divergence_loss(outputs_batch)\n",
     "            data_loss_val = criterion(outputs_batch, targets_batch)\n",
     "\n",
-    "            val_loss = data_loss_val #+ physics_loss_weight*physics_loss_val\n",
+    "            val_loss = data_loss_val\n",
     "\n",
     "            # Accumulate\n",
     "            batch_size = inputs_batch.size(0)\n",
     "            running_val_loss += val_loss.item() * batch_size\n",
-    "            running_val_data_loss += data_loss_val.item() * batch_size\n",
-    "            #running_val_physics_loss += physics_loss_val.item() * batch_size    \n",
+    "            running_val_data_loss += data_loss_val.item() * batch_size  \n",
     "\n",
     "    # Average\n",
     "    n_val = len(val_loader.dataset)\n",
     "    epoch_val_loss = running_val_loss / n_val\n",
     "    epoch_val_data = running_val_data_loss / n_val\n",
-    "    # epoch_val_physics = running_val_physics_loss / n_val\n",
     "\n",
     "    # Accumulate\n",
     "    val_losses.append(epoch_val_loss)\n",
     "    val_data_losses.append(epoch_val_data)\n",
-    "    # val_physics_losses.append(epoch_val_physics)\n",
     "\n",
     "    # -------- LOGGING --------\n",
     "    if (epoch + 1) % 10 == 0 or epoch == 0:\n",
@@ -841,8 +820,6 @@
     "            f\"Epoch [{epoch+1:3d}/{num_epochs}] | \"\n",
     "            f\"Train: {epoch_train_loss:.6f} \"\n",
     "            f\"Val: {epoch_val_loss:.6f} \"\n",
-    "             #  f\"(data: {epoch_val_data:.6f}, phys: {epoch_val_physics:.6f})\"\n",
-    "             #  f\"(data: {epoch_data_loss:.6f}, phys: {epoch_physics_loss:.6f}) | \"\n",
     "        )\n",
     "\n",
     "print(\"\\n✓ Training complete!\")"
